IPDS-3A, resolved web-based pre-check errors for JOBID CID_778322b, for OEB and LVS errors, make run-precheck CLEAN

--- a/lvs/user_project_wrapper/lvs_config.json
+++ b/lvs/user_project_wrapper/lvs_config.json
@@ -24,6 +24,7 @@
 	],
 	"LVS_VERILOG_FILES": [
 		"$UPRJ_ROOT/verilog/gl/user_proj_example.v",
+    "$UPRJ_ROOT/verilog/gl/counter_top.v",
 		"$UPRJ_ROOT/verilog/gl/$TOP_SOURCE.v"
 	],
 	"LAYOUT_FILE": "$UPRJ_ROOT/gds/$TOP_LAYOUT.gds"
